feat:api/verify
